[gd_scene load_steps=3 format=3 uid="uid://bxo7hcyuhn1tq"]

[ext_resource type="LabelSettings" uid="uid://bvqbhj7dsvw3d" path="res://ui/sogoe_32.tres" id="1_ilcvq"]
[ext_resource type="Script" path="res://ui/audio_slider.gd" id="1_ofi4t"]

[node name="AudioSlider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofi4t")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 42

[node name="AudioNameLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Master Volume"
label_settings = ExtResource("1_ilcvq")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="AudioNumLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "99.2"
label_settings = ExtResource("1_ilcvq")

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
